@@ -24,6 +24,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #4387: binascii now refuses to accept str as binary input.
+
 - Issue #4073: Add 2to3 support to build_scripts, refactor that support
   in build_py.
 
